[gd_scene load_steps=13 format=3 uid="uid://rfr1b2fb0o4q"]

[ext_resource type="Script" uid="uid://tvn1ktkbvk13" path="res://Scripts/ship_enemy.gd" id="1_exykt"]
[ext_resource type="Texture2D" uid="uid://cx73ri0pr6pa5" path="res://Assets/Sprites/ship_enemy.png" id="1_nlnte"]
[ext_resource type="Script" uid="uid://drwkj4b838jx8" path="res://Scripts/hitbox.gd" id="2_bscg7"]
[ext_resource type="AudioStream" uid="uid://cyp3ijw40ky0n" path="res://Assets/Audio/laser_sound.wav" id="4_f0gle"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_exykt"]
size = Vector2(11, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bscg7"]
size = Vector2(10.4142, 20)

[sub_resource type="Gradient" id="Gradient_f0gle"]
colors = PackedColorArray(1, 0.43481088, 0.36613947, 1, 1, 0, 0.3529412, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_j3121"]
gradient = SubResource("Gradient_f0gle")

[sub_resource type="Gradient" id="Gradient_um53k"]
colors = PackedColorArray(1, 0.36778843, 0.3002166, 1, 0.82879096, 0, 0.012556447, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_2kinu"]
gradient = SubResource("Gradient_um53k")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6b5vx"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 1.0
emission_ring_inner_radius = 0.0
emission_ring_cone_angle = 90.0
angle_min = 108.000015
angle_max = 578.0
radial_velocity_min = -2.2351742e-05
radial_velocity_max = 16.449978
gravity = Vector3(0, 0, 0)
scale_min = 20.0
scale_max = 30.0
color_ramp = SubResource("GradientTexture1D_2kinu")
color_initial_ramp = SubResource("GradientTexture1D_j3121")

[sub_resource type="CircleShape2D" id="CircleShape2D_f0gle"]
radius = 72.4177

[node name="ShipEnemy" type="CharacterBody2D" groups=["enemigos"]]
z_index = 2
scale = Vector2(2.5, 2.5)
collision_layer = 9
script = ExtResource("1_exykt")
metadata/_edit_group_ = true

[node name="Hitbox" type="Area2D" parent="."]
script = ExtResource("2_bscg7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
z_index = 1
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_exykt")
debug_color = Color(0.998661, 0, 0.136085, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_nlnte")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.578565, 0)
shape = SubResource("RectangleShape2D_bscg7")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(-0.38571, -18.8998)
scale = Vector2(39.2115, 143.279)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="EnemyLsrSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_f0gle")
volume_db = -18.32
pitch_scale = 0.48

[node name="EngineTrail" type="GPUParticles2D" parent="."]
position = Vector2(-0.4, 20)
scale = Vector2(0.99999994, 0.99999994)
amount = 10
lifetime = 0.3
process_material = SubResource("ParticleProcessMaterial_6b5vx")

[node name="SeparationArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="SeparationArea"]
position = Vector2(0, 0.8)
shape = SubResource("CircleShape2D_f0gle")
debug_color = Color(0.904106, 0.000141889, 0.750942, 0.42)

[connection signal="area_entered" from="Hitbox" to="Hitbox" method="_on_area_entered"]
